<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/info_dialog_main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/info_dialog_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/info_dialog_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark"
            android:padding="20dp"
            android:textAlignment="center">

        <TextView
            android:id="@+id/info_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="@color/darkerWhite"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_dialog_content_p1"
            android:textSize="18sp"
            android:textColor="@color/darkerWhite"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_dialog_content_p2"
            android:textSize="18sp"
            android:textColor="@color/darkerWhite"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_dialog_content_p3"
            android:textSize="18sp"
            android:textColor="@color/darkerWhite"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="4dp"/>

        <Button
            android:id="@+id/info_dialog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_dialog_button"
            android:textColor="@color/transparent_grey"
            android:backgroundTint="@color/darkerWhite"
            android:background="@drawable/my_button"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>